force-app/main/default/objects/ExamsRequired__c/ExamsRequired__c.object-meta.xml
<CustomObject>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Exams Required</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Exams Required Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exams Required</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>