force-app/main/default/objects/ExamsRequired__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exams Required</relationshipLabel>
    <relationshipName>Exams_Required</relationshipName>
    <type>Lookup</type>
</CustomField>