force-app/main/default/objects/ExamsRequired__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Exams Required</relationshipLabel>
    <relationshipName>Exams_Required</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>