force-app/main/default/objects/ExamsRequired__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit</label>
    <type>Checkbox</type>
</CustomField>