force-app/main/default/objects/ExamsRequired__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>PacPoint-MV091619 - Created for PVL phase 1</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>