force-app/main/default/objects/ExamsRequired__c/fields/ExamEligibleEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExamEligibleEndDate__c</fullName>
    <description>use for indicating the last day for candidate to take the exam</description>
    <label>Exam Eligible End Date</label>
    <type>Date</type>
</CustomField>