force-app/main/default/objects/ExamsRequired__c/fields/ExamEligibleStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExamEligibleStartDate__c</fullName>
    <description>Use for indicating the eligible start date to take the exam</description>
    <label>Exam Eligible Start Date</label>
    <type>Date</type>
</CustomField>