force-app/main/default/objects/ExamsRequired__c/fields/ExamState__c.field-meta.xml
<CustomField>
    <fullName>ExamState__c</fullName>
    <label>Exam State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>USStates</valueSetName>
    </valueSet>
</CustomField>