force-app/main/default/objects/ExamsRequired__c/fields/ExamType__c.field-meta.xml
<CustomField>
    <fullName>ExamType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Exam Type</label>
    <referenceTo>ExamTypes__c</referenceTo>
    <relationshipLabel>Exams Required</relationshipLabel>
    <relationshipName>Exams_Required</relationshipName>
    <type>Lookup</type>
</CustomField>