force-app/main/default/objects/ExamsRequired__c/fields/NewFailedResult__c.field-meta.xml
<CustomField>
    <fullName>NewFailedResult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN 12212020</description>
    <label>New Failed Result</label>
    <type>Checkbox</type>
</CustomField>