force-app/main/default/objects/ExamsRequired__c/fields/NumberofAttempts__c.field-meta.xml
<CustomField>
    <fullName>NumberofAttempts__c</fullName>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Number of Attempts</label>
    <summaryFilterItems>
        <field>ExamResults__c.Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ExamResults__c.TakenRemedialCourse__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ExamResults__c.ExamsRequired__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>