force-app/main/default/objects/ExamsRequired__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>PacPoint-MV091519 - Created for PVL phase 1. Created to be used in the query for the Exam Results Data Load</description>
    <formula>TEXT(Application__r.Phase__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase</label>
    <type>Text</type>
</CustomField>