force-app/main/default/objects/ExamsRequired__c/fields/Prevent_Save__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent Save</label>
    <type>Checkbox</type>
</CustomField>