force-app/main/default/objects/ExamsRequired__c/fields/PreviousExamEligibleStartDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousExamEligibleStartDate__c</fullName>
    <description>JF 5/20/24 - Created this field to capture the previous exam eligible start date</description>
    <label>Previous Exam Eligible Start Date</label>
    <type>Date</type>
</CustomField>