force-app/main/default/objects/ExamsRequired__c/fields/PushExamDate1Year__c.field-meta.xml
<CustomField>
    <fullName>PushExamDate1Year__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN12112020-Created for UAT Cycle 3</description>
    <label>Push Exam Date 1 Year</label>
    <type>Checkbox</type>
</CustomField>