force-app/main/default/objects/ExamsRequired__c/fields/PushExamDate2Years__c.field-meta.xml
<CustomField>
    <fullName>PushExamDate2Years__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN12112020-Created for UAT Cycle 3</description>
    <label>Push Exam Date 2 Years</label>
    <type>Checkbox</type>
</CustomField>