force-app/main/default/objects/ExamsRequired__c/fields/PVLBPID__c.field-meta.xml
<CustomField>
    <fullName>PVLBPID__c</fullName>
    <description>PacPoint-MV091519 - Created for PVL phase 1.Created to use in the query when loading Exam Results</description>
    <formula>Applicant__r.BPID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PVL BP ID</label>
    <type>Text</type>
</CustomField>