force-app/main/default/objects/ExamsRequired__c/fields/RequiredExam__c.field-meta.xml
<CustomField>
    <fullName>RequiredExam__c</fullName>
    <description>This field is to indicate if the exam record is a required exam type for this license type</description>
    <formula>IF(
AND(
 ExamType__r.Classification__c = &quot;&quot;,
 ExamType__r.LicenseType__c =  Application__r.LicenseType__c )
,
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Exam?</label>
    <type>Checkbox</type>
</CustomField>