force-app/main/default/objects/ExamsRequired__c/fields/SendtoExamVendor__c.field-meta.xml
<CustomField>
    <fullName>SendtoExamVendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Exam Vendor</label>
    <type>Checkbox</type>
</CustomField>