force-app/main/default/objects/ExamsRequired__c/fields/SendtoExamVendorType__c.field-meta.xml
<CustomField>
    <fullName>SendtoExamVendorType__c</fullName>
    <label>Send to Exam Vendor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>