force-app/main/default/objects/ExamsRequired__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>PacPoint-MV091219 - Created for PVL phase 1</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Results</fullName>
                <default>true</default>
                <label>Awaiting Results</label>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Exam Not Required</fullName>
            </value>
            <value>
                <fullName>Board Deferred</fullName>
                <isActive>false</isActive>
                <label>Board Deferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>