force-app/main/default/objects/ExamsRequired__c/fields/TakenRemedialCourse__c.field-meta.xml
<CustomField>
    <fullName>TakenRemedialCourse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taken Remedial Course</label>
    <type>Checkbox</type>
</CustomField>