force-app/main/default/objects/ExamsRequired__c/validationRules/Credit_State_required_if_Credit_is_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_State_required_if_Credit_is_set</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Credit__c,
(ISPICKVAL(ExamState__c, &quot;&quot;))
)</errorConditionFormula>
    <errorMessage>Please select the state in which the applicant satisfied the exam requirement.</errorMessage>
</ValidationRule>