force-app/main/default/objects/ExamsRequired__c/validationRules/PreventNewExamsRequiredWithSameExamType.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventNewExamsRequiredWithSameExamType</fullName>
    <active>false</active>
    <errorConditionFormula>Prevent_Save__c = True</errorConditionFormula>
    <errorMessage>You can&apos;t create this exam required record because there is one existed with same exam type.</errorMessage>
</ValidationRule>